objects/RecordTypeIds__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>RTIDCaseSampleRequest__c</fullName>
        <label>RTIDCaseSampleRequest</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDCaseTemporaryProduct__c</fullName>
        <description>Field for holding case temporary product record type ID</description>
        <label>RTID.Case.TemporaryProduct</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDProduct2Product__c</fullName>
        <label>RTID.Product2.Product</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDProduct2TempProduct__c</fullName>
        <label>RTID.Product2.Temp_Product</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDQuoteOpportunityQuote__c</fullName>
        <label>RTID.Quote.OpportunityQuote</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDSummaryReportCustomerReport__c</fullName>
        <label>RTID.SummaryReport.CustomerReport</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDSummaryReportPrincipalReport__c</fullName>
        <label>RTID.SummaryReport.PrincipalReport</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDrtQuoteCustomer__c</fullName>
        <label>RTIDrtQuoteCustomer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDrtQuoteLineCustomer__c</fullName>
        <label>RTIDrtQuoteLineCustomer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDrtQuoteLineOpportunity__c</fullName>
        <label>RTIDrtQuoteLineOpportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDrtQuoteLineSingle__c</fullName>
        <label>RTIDrtQuoteLineSingle</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDrtQuoteOpportunity__c</fullName>
        <label>RTIDrtQuoteOpportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDrtQuoteSingle__c</fullName>
        <label>RTIDrtQuoteSingle</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDrtrtQuoteLineRenewal__c</fullName>
        <label>RTIDrtrtQuoteLineRenewal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTIDrtrtQuoteRenewal__c</fullName>
        <label>RTIDrtrtQuoteRenewal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>RecordTypeIds</label>
</CustomObject>